# sellout

./: .gitignore  README.md  pyproject.toml
src/: manage.py
src/events/: admin.py  apps.py  models.py  urls.py  views.py
src/events/migrations/: 0001_initial.py  0002_remove_events_date_events_end_date_events_start_date.py  0003_alter_events_end_date_alter_events_start_date.py  0004_alter_events_end_date.py  0005_events_tickets_link_events_vk_link.py  0006_alter_events_tickets_link_alter_events_vk_link.py  0007_alter_events_tickets_link_alter_events_vk_link.py  0008_events_description.py
src/mainpage/: urls.py  views.py
src/merch/: admin.py  apps.py  models.py  urls.py  views.py
src/merch/migrations/: 0001_initial.py  0002_remove_merch_image_merchgallery.py
src/sellout/: asgi.py  settings.py  urls.py  wsgi.py
src/static/css/: fonts.css  index.css
src/static/css/concerts/: concerts.css
src/static/css/concerts/__cards/: concerts__cards.css
src/static/css/concerts/__heading/: concerts__heading.css
src/static/css/concerts/__map/: concerts__map.css
src/static/css/header/: header.css
src/static/css/header/__logo/: header__logo.css
src/static/css/header/__pointer/: header__pointer.css
src/static/css/header/__video/: header__video.css
src/static/css/menu/: menu.css
src/static/css/menu/__container/: menu__container.css
src/static/css/page/: page.css
src/static/css/stars/: stars.css
src/static/js/: stars.js
src/templates/: events.html  mainpage.html  merch.html
src/templates/includes/: header.html  wrapper.html
(+2 files in other folders)
