[tool.poetry]
name = "sellout"
version = "0.1.0"
description = ""
authors = ["Alexander <csmcgl@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
psycopg2-binary = "^2.9.6"
pillow = "^9.5.0"

[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.1"
werkzeug = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
